# cubectl

./: .gitignore  1services.yaml  app_scheme.md  app_scheme_simple.md  pyproject.toml  readme.md  requirements.txt  setup.py  todo.md
cubectl/: .env  .env-example  __init__.py  config.yaml  conig.yaml  cubectl_applications_register.yaml  cubectl_default  init-file-example.yaml  init.yaml  init_other.yaml  main.py  pid_example_status_file.yaml  temp.py  todo.md
cubectl.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
cubectl/cubectl.egg-info/: PKG-INFO  SOURCES.txt
cubectl/src/: __init__.py  config.yaml
cubectl/src/configurator/: __init__.py  configurator.py
cubectl/src/executor/: __init__.py  executor.py
cubectl/src/initialization_functions/: __init__.py  application_registration.py
cubectl/src/models/: __init__.py  configurator_request.py  init_application.py  init_process.py  setup_status.py  status_process.py
cubectl/src/service_process/: __init__.py  service_process.py
cubectl/src/utils/: __init__.py  colors.py  common.py  format_report.py  get_status_file.py  log_reader.py  nginx_configuration_related.py  telegram_utils.py  utils_exceptions.py
cubectl/tests/: tests_application_registration.py  tests_configurator.py  tests_initialization.py  tests_service_process.py  tests_utils_common.py  tests_utils_get_status_file.py  tests_utils_nginx.py
cubectl/tests/assets/example_services/: .env
cubectl/tests/assets/temp/: cubectl_applications_register.yaml  default_status_report.yaml  (+5 more)
cubectl/tests/example_services/: example_service_0.py
(+13 files in other folders)
